--- a/src/app.css
+++ b/src/app.css
@@ -159,10 +159,61 @@
     5. Improve text rendering
   */
 
+
+/* ReadexPro font faces */
+
+@font-face {
+  font-family: 'ReadexPro';
+  src: url('/fonts/ReadexPro-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ReadexPro';
+  src: url('/fonts/ReadexPro-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ReadexPro';
+  src: url('/fonts/ReadexPro-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ReadexPro';
+  src: url('/fonts/ReadexPro-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ReadexPro';
+  src: url('/fonts/ReadexPro-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ReadexPro';
+  src: url('/fonts/ReadexPro-bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+  font-family: 'ReadexPro', Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
 }
 
 
